--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
     <children>
         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
         <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
@@ -25,19 +25,18 @@
         <VBox layoutY="310.0" prefHeight="211.0" prefWidth="255.0">
             <children>
                 <TextField fx:id="messageField" promptText="Enter message here" />
-                <Button onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
+                <Button fx:id="sendButton" onAction="#handleSendAction" prefHeight="25.0" prefWidth="296.0" text="Send" />
                 <TextArea fx:id="messageArea" editable="false" />
             </children>
         </VBox>
         <VBox layoutX="588.0" layoutY="95.0" prefHeight="211.0" prefWidth="144.0">
             <children>
-                <Label style="-fx-background-color: #FFFFFF;" text="Usernames:" />
-                <TextArea fx:id="usernameList" editable="false" prefHeight="213.0" prefWidth="144.0" />
+                <TextArea fx:id="killedList" editable="false" prefHeight="213.0" prefWidth="144.0" />
             </children>
         </VBox>
         <VBox layoutX="14.0" layoutY="142.0" prefHeight="153.0" prefWidth="144.0">
             <children>
-                <TextField editable="false" text="Your Role:" />
+                <TextField fx:id="yourUsername" editable="false" />
                 <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
             </children>
         </VBox>
@@ -53,7 +52,7 @@
                 <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
             </font>
         </Text>
-        <ImageView fx:id="counter" fitHeight="225.0" fitWidth="290.0" layoutX="-60.0" layoutY="-48.0">
+        <ImageView fx:id="counter" fitHeight="221.0" fitWidth="288.0" layoutX="-60.0" layoutY="-48.0">
             <image>
                 <Image url="@Images/sun.png" />
             </image>
@@ -113,126 +112,115 @@
         <Rectangle fx:id="rectangleForSnitch11" fill="#4D2613" height="20.0" layoutX="399.0" layoutY="308.0" visible="false" width="60.0" />
         <Label fx:id="labelForSnitch11" layoutX="399.0" layoutY="308.0" mouseTransparent="true" text="" textFill="white" />
 
-        <AnchorPane fx:id="User6" disable="true" layoutX="430.0" layoutY="115.0" onMouseClicked="#AttemptAction"
-                    prefHeight="69.0" prefWidth="71.0" visible="false">
+        <AnchorPane fx:id="User6" disable="true" layoutX="430.0" layoutY="115.0" onMouseClicked="#AttemptAction" prefHeight="69.0" prefWidth="71.0" visible="false">
             <ImageView fitHeight="69.0" fitWidth="72.0">
                 <clip>
-                    <Circle centerX="50" centerY="50"
-                            radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="50" centerY="50" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar7.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar7.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser6" style="-fx-background-color: white;" alignment="CENTER" layoutY="50.0"
-                   mouseTransparent="true" prefHeight="17.0" prefWidth="74.0"/>
+            <Label fx:id="labelForUser6" alignment="CENTER" layoutY="50.0" mouseTransparent="true" prefHeight="17.0" prefWidth="74.0" style="-fx-background-color: white;" />
         </AnchorPane>
 
-        <AnchorPane fx:id="User0" disable="true" layoutX="190.0" layoutY="12.0" onMouseClicked="#AttemptAction"
-                    prefHeight="52.0" prefWidth="58.0" visible="false">
+        <AnchorPane fx:id="User0" disable="true" layoutX="190.0" layoutY="12.0" onMouseClicked="#AttemptAction" prefHeight="52.0" prefWidth="58.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40"
-                            radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar1.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar1.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser0" style="-fx-background-color: white;" alignment="CENTER" layoutX="-2.0"
-                   layoutY="34.0" mouseTransparent="true" prefHeight="17.0" prefWidth="60.0"/>
+            <Label fx:id="labelForUser0" alignment="CENTER" layoutX="-2.0" layoutY="34.0" mouseTransparent="true" prefHeight="17.0" prefWidth="60.0" style="-fx-background-color: white;" />
         </AnchorPane>
-        <AnchorPane fx:id="User1" disable="true" layoutX="283.0" layoutY="11.0" onMouseClicked="#AttemptAction"
-                    prefHeight="45.0" prefWidth="58.0" visible="false">
+        <AnchorPane fx:id="User1" disable="true" layoutX="283.0" layoutY="11.0" onMouseClicked="#AttemptAction" prefHeight="45.0" prefWidth="58.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar2.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar2.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser1" style="-fx-background-color: white;" alignment="CENTER" layoutY="36.0"
-                   mouseTransparent="true" prefHeight="17.0" prefWidth="59.0"/>
+            <Label fx:id="labelForUser1" alignment="CENTER" layoutY="36.0" mouseTransparent="true" prefHeight="17.0" prefWidth="59.0" style="-fx-background-color: white;" />
         </AnchorPane>
-        <AnchorPane fx:id="User2" disable="true" layoutX="385.0" layoutY="24.0" onMouseClicked="#AttemptAction"
-                    prefHeight="59.0" prefWidth="61.0" visible="false">
+        <AnchorPane fx:id="User2" disable="true" layoutX="385.0" layoutY="24.0" onMouseClicked="#AttemptAction" prefHeight="59.0" prefWidth="61.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40"
-                            radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar3.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar3.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser2" style="-fx-background-color: white;" alignment="CENTER" layoutY="38.0"
-                   mouseTransparent="true" prefHeight="17.0" prefWidth="59.0"/>
+            <Label fx:id="labelForUser2" alignment="CENTER" layoutY="38.0" mouseTransparent="true" prefHeight="17.0" prefWidth="59.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User3" disable="true" layoutX="484.0" layoutY="34.0" onMouseClicked="#AttemptAction" prefHeight="73.0" prefWidth="74.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar4.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar4.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser3" style="-fx-background-color: white;" alignment="CENTER" layoutY="52.0" mouseTransparent="true" prefHeight="17.0" prefWidth="76.0" />
+            <Label fx:id="labelForUser3" alignment="CENTER" layoutY="52.0" mouseTransparent="true" prefHeight="17.0" prefWidth="76.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User11" disable="true" layoutX="384.0" layoutY="236.0" onMouseClicked="#AttemptAction" prefHeight="59.0" prefWidth="59.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar12.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar12.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser11" style="-fx-background-color: white;" alignment="CENTER" layoutY="55.0" mouseTransparent="true" prefHeight="17.0" prefWidth="78.0" />
+            <Label fx:id="labelForUser11" alignment="CENTER" layoutY="55.0" mouseTransparent="true" prefHeight="17.0" prefWidth="78.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User10" disable="true" layoutX="261.0" layoutY="255.0" onMouseClicked="#AttemptAction" prefHeight="73.0" prefWidth="78.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar11.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar11.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser10" style="-fx-background-color: white;" alignment="CENTER" layoutY="50.0" mouseTransparent="true" prefHeight="17.0" prefWidth="78.0" />
+            <Label fx:id="labelForUser10" alignment="CENTER" layoutY="50.0" mouseTransparent="true" prefHeight="17.0" prefWidth="78.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User9" disable="true" layoutX="477.0" layoutY="184.0" onMouseClicked="#AttemptAction" prefHeight="75.0" prefWidth="78.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar10.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar10.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser9" style="-fx-background-color: white;" alignment="CENTER" layoutY="56.0" mouseTransparent="true" prefHeight="17.0" prefWidth="79.0" />
+            <Label fx:id="labelForUser9" alignment="CENTER" layoutY="56.0" mouseTransparent="true" prefHeight="17.0" prefWidth="79.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User8" disable="true" layoutX="304.0" layoutY="182.0" onMouseClicked="#AttemptAction" prefHeight="73.0" prefWidth="75.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar10.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar10.png" /> <!-- Replace with your image path -->
             </ImageView>
             <Label layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" />
-            <Label fx:id="labelForUser8" style="-fx-background-color: white;" alignment="CENTER" layoutY="52.0" mouseTransparent="true" prefHeight="17.0" prefWidth="75.0" />
+            <Label fx:id="labelForUser8" alignment="CENTER" layoutY="52.0" mouseTransparent="true" prefHeight="17.0" prefWidth="75.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User7" disable="true" layoutX="210.0" layoutY="185.0" onMouseClicked="#AttemptAction" prefHeight="62.0" prefWidth="68.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar8.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar8.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser7" layoutY="46.0" style="-fx-background-color: white;" alignment="CENTER" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" />
+            <Label fx:id="labelForUser7" alignment="CENTER" layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User5" disable="true" layoutX="314.0" layoutY="96.0" onMouseClicked="#AttemptAction" prefHeight="68.0" prefWidth="74.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar6.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar6.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser5" style="-fx-background-color: white;" alignment="CENTER" layoutX="1.0" layoutY="48.0" mouseTransparent="true" prefHeight="17.0" prefWidth="72.0" />
+            <Label fx:id="labelForUser5" alignment="CENTER" layoutX="1.0" layoutY="48.0" mouseTransparent="true" prefHeight="17.0" prefWidth="72.0" style="-fx-background-color: white;" />
         </AnchorPane>
         <AnchorPane fx:id="User4" disable="true" layoutX="212.0" layoutY="98.0" onMouseClicked="#AttemptAction" prefHeight="62.0" prefWidth="68.0" visible="false">
             <ImageView fitHeight="80" fitWidth="80">
                 <clip>
-                    <Circle centerX="40" centerY="40" radius="35"/> <!-- Circle radius is half of fitWidth/fitHeight -->
+                    <Circle centerX="40" centerY="40" radius="35" /> <!-- Circle radius is half of fitWidth/fitHeight -->
                 </clip>
-                <Image url="@Images/Avatars/Avatar5.png"/> <!-- Replace with your image path -->
+                <Image url="@Images/Avatars/Avatar5.png" /> <!-- Replace with your image path -->
             </ImageView>
-            <Label fx:id="labelForUser4" style="-fx-background-color: white;" alignment="CENTER" layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" />
+            <Label fx:id="labelForUser4" alignment="CENTER" layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: white;" />
         </AnchorPane>
 
     </children>
