--- a/src/main/resources/dk/dtu/view/PopUpIP.fxml
+++ b/src/main/resources/dk/dtu/view/PopUpIP.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -9,37 +10,45 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.PopUpIPController">
-   <children>
-      <ImageView fitHeight="400.0" fitWidth="421.0" layoutX="-3.0">
-         <image>
-            <Image url="@Images/moonlit_gunslinger.png" />
-         </image>
-      </ImageView>
-      <VBox layoutX="236.0" layoutY="163.0" />
-      <TextField fx:id="UserNameField" layoutX="201.0" layoutY="163.0" prefHeight="25.0" prefWidth="200.0" promptText="Enter username" />
-      <TextField fx:id="IpField" layoutX="201.0" layoutY="200.0" prefHeight="25.0" prefWidth="200.0" promptText="Enter game IP address" />
-      <AnchorPane fx:id="joinGamePane" layoutX="201.0" layoutY="274.0" prefHeight="1.0" onMouseClicked="#JoinGameBasedOnIP" prefWidth="200.0">
-         <children>
-            <Rectangle id="joinGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="#030354" height="65.0" stroke="BLACK" strokeType="INSIDE" width="200.0" />
-            <Text fill="#900000" layoutX="56.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Join Game" wrappingWidth="88.890380859375">
-               <font>
-                  <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="returnPane" onMouseClicked="#returnToMenu" layoutX="285.0" layoutY="14.0" prefHeight="65.0" prefWidth="75.0">
-         <children>
-            <Rectangle id="joinGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="#030354" height="65.0" stroke="BLACK" strokeType="INSIDE" width="116.0" />
-            <Text fill="#900000" layoutX="25.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Return" wrappingWidth="64.890380859375">
-               <font>
-                  <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
-   </children>
+<Pane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+      prefHeight="400.0" prefWidth="415.0" xmlns="http://javafx.com/javafx/19"
+      fx:controller="dk.dtu.controller.PopUpIPController">
+    <children>
+        <ImageView fitHeight="400.0" fitWidth="421.0" layoutX="-3.0">
+            <image>
+                <Image url="@Images/moonlit_gunslinger.png"/>
+            </image>
+        </ImageView>
+        <VBox layoutX="236.0" layoutY="163.0"/>
+        <TextField fx:id="UserNameField" layoutX="201.0" layoutY="163.0" prefHeight="25.0" prefWidth="200.0"
+                   promptText="Enter username"/>
+        <TextField fx:id="IpField" layoutX="201.0" layoutY="200.0" prefHeight="25.0" prefWidth="200.0"
+                   promptText="Enter game IP address"/>
+        <AnchorPane fx:id="joinGamePane" layoutX="201.0" layoutY="274.0" prefHeight="1.0"
+                    onMouseClicked="#JoinGameBasedOnIP" prefWidth="200.0">
+            <children>
+                <Rectangle id="joinGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="#030354" height="65.0"
+                           stroke="BLACK" strokeType="INSIDE" width="200.0"/>
+                <Text fill="#900000" layoutX="56.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0"
+                      text="Join Game" wrappingWidth="88.890380859375">
+                    <font>
+                        <Font name="Gill Sans Ultra Bold Condensed" size="20.0"/>
+                    </font>
+                </Text>
+            </children>
+        </AnchorPane>
+        <AnchorPane fx:id="returnPane" onMouseClicked="#returnToMenu" layoutX="285.0" layoutY="14.0" prefHeight="65.0"
+                    prefWidth="75.0">
+            <children>
+                <Rectangle id="joinGameRectangle" arcHeight="5.0" arcWidth="5.0" fill="#030354" height="65.0"
+                           stroke="BLACK" strokeType="INSIDE" width="116.0"/>
+                <Text fill="#900000" layoutX="25.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Return"
+                      wrappingWidth="64.890380859375">
+                    <font>
+                        <Font name="Gill Sans Ultra Bold Condensed" size="20.0"/>
+                    </font>
+                </Text>
+            </children>
+        </AnchorPane>
+    </children>
 </Pane>
