--- a/src/main/resources/dk/dtu/view/lobby.fxml
+++ b/src/main/resources/dk/dtu/view/lobby.fxml
@@ -1,37 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
-
-<VBox alignment="CENTER" spacing="10" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="dk.dtu.controller.LobbyController">
-   <HBox>
-      <children>
-         <VBox>
-            <children>
-               <TextField fx:id="usernameField" promptText="Enter your username" />
-               <TextField fx:id="chatroomField" promptText="Enter chat room" text="lobby" />
-               <Button fx:id ="connectButton" onAction="#handleConnectAction" text="Connect" />
-               <TextField fx:id="messageField" promptText="Enter message here" />
-               <Button  onAction="#handleSendAction" text="Send" />
-               <TextArea fx:id="messageAreaLobby" editable="false" />
-            </children>
-         </VBox>
-         <VBox>
-            <children>
-               <Label text="Usernames:" />
-               <TextArea fx:id="usernameList" editable="false" prefWidth="300.0" />
-               <AnchorPane fx:id="lobbyAnchorPane" prefHeight="100.0" prefWidth="300.0">
-                  <children>
-                     <Button fx:id="StartGameButton" layoutX="108.0" layoutY="37.0" mnemonicParsing="false" onAction="#StartGameAction" text="StartGame" />
-                  </children>
-               </AnchorPane>
-            </children>
-         </VBox>
-      </children>
-   </HBox>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" spacing="10"
+      fx:controller="dk.dtu.controller.LobbyController">
+    <HBox>
+        <children>
+            <VBox>
+                <children>
+                    <TextField fx:id="usernameField" promptText="Enter your username"/>
+                    <TextField fx:id="chatroomField" promptText="Enter chat room" text="lobby"/>
+                    <Button fx:id="connectButton" onAction="#handleConnectAction" text="Connect"/>
+                    <TextField fx:id="messageField" promptText="Enter message here"/>
+                    <Button onAction="#handleSendAction" text="Send"/>
+                    <TextArea fx:id="messageAreaLobby" editable="false"/>
+                </children>
+            </VBox>
+            <VBox>
+                <children>
+                    <Label text="Usernames:"/>
+                    <TextArea fx:id="usernameList" editable="false" prefWidth="300.0"/>
+                    <AnchorPane fx:id="lobbyAnchorPane" prefHeight="100.0" prefWidth="300.0">
+                        <children>
+                            <Button fx:id="StartGameButton" layoutX="108.0" layoutY="37.0" mnemonicParsing="false"
+                                    onAction="#StartGameAction" text="StartGame"/>
+                        </children>
+                    </AnchorPane>
+                </children>
+            </VBox>
+        </children>
+    </HBox>
 </VBox>
