--- a/src/main/resources/dk/dtu/view/App_view.fxml
+++ b/src/main/resources/dk/dtu/view/App_view.fxml
@@ -12,9 +12,8 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
+<Pane prefHeight="521.0" prefWidth="746.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.dtu.controller.AppController">
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="200.0" stroke="BLACK" strokeType="INSIDE" width="302.0" />
     <ImageView fx:id="background" fitHeight="521.0" fitWidth="746.0">
         <Image url="@Images/moonlit_main_day.jpg" />
@@ -31,16 +30,8 @@
         <TextField fx:id="yourUsername" editable="false" />
         <TextArea fx:id="roleBox" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
     </VBox>
-    <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0">
-        <TextField />
-        <TextArea fx:id="infoTextField" prefHeight="200.0" prefWidth="200.0" />
-    </VBox>
+    <VBox layoutX="547.0" layoutY="403.0" prefHeight="118.0" prefWidth="199.0" />
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#06223b" height="45.0" layoutX="603.0" stroke="BLACK" strokeType="INSIDE" width="144.0" />
-    <Text fill="#7f0000" layoutX="630.0" layoutY="29.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Settings" textAlignment="CENTER" wrappingWidth="90.552001953125">
-        <font>
-            <Font name="Gill Sans Ultra Bold Condensed" size="20.0" />
-        </font>
-    </Text>
     <ImageView fx:id="counter" fitHeight="221.0" fitWidth="288.0" layoutX="-60.0" layoutY="-48.0">
         <Image url="@Images/sun.png" />
     </ImageView>
@@ -196,5 +187,6 @@
         </ImageView>
         <Label fx:id="labelForUser4" alignment="CENTER" layoutY="46.0" mouseTransparent="true" prefHeight="17.0" prefWidth="70.0" style="-fx-background-color: white;" />
     </AnchorPane>
+     <TextField fx:id="infoTextField" editable="false" layoutX="581.0" layoutY="73.0" />
 
 </Pane>
